// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when generating education organization reference for both core and empty extension should only generate core education organization reference element 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\" ?>
<!--
  Order of the types and the keys elements is not important.
  The extension metadata will add to the core metadata and contain only extension types.
-->
<EdOrgReferences>
  <EdOrgReference>
    <type>School</type>
    <key>SchoolId</key>
  </EdOrgReference>
</EdOrgReferences>
"
`;

exports[`when generating education organization reference for both core and extensions should generate core education organization reference element 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\" ?>
<!--
  Order of the types and the keys elements is not important.
  The extension metadata will add to the core metadata and contain only extension types.
-->
<EdOrgReferences>
  <EdOrgReference>
    <type>School</type>
    <key>SchoolId</key>
  </EdOrgReference>
</EdOrgReferences>
"
`;

exports[`when generating education organization reference for both core and extensions should generate extension education organization reference element 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\" ?>
<!--
  Order of the types and the keys elements is not important.
  The extension metadata will add to the core metadata and contain only extension types.
-->
<EdOrgReferences>
  <EdOrgReference>
    <type>EducationProvider</type>
    <key>EducationProviderId</key>
  </EdOrgReference>
</EdOrgReferences>
"
`;

exports[`when generating education organization reference for core should generate education organization reference element 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\" ?>
<!--
  Order of the types and the keys elements is not important.
  The extension metadata will add to the core metadata and contain only extension types.
-->
<EdOrgReferences>
  <EdOrgReference>
    <type>School</type>
    <key>SchoolId</key>
  </EdOrgReference>
</EdOrgReferences>
"
`;

exports[`when generating education organization reference for extension should generate education organization reference element 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\" ?>
<!--
  Order of the types and the keys elements is not important.
  The extension metadata will add to the core metadata and contain only extension types.
-->
<EdOrgReferences>
  <EdOrgReference>
    <type>EducationProvider</type>
    <key>EducationProviderId</key>
  </EdOrgReference>
</EdOrgReferences>
"
`;
